# ai-nexus-engine

./: .dockerignore  .env.example  DEPLOYMENT_GUIDE.md  Dockerfile  activate_ainexus_pillars.sh  app.py  check_deployment.py  clean_deploy.py  dashboard.html  deploy-dashboard.sh  deploy-phase1.sh  deploy-port.bat  deploy-verify.sh  deploy-via-github.sh  deploy.bat  deploy.py  deploy.sh  deploy8001.py  deploy_ainexus.py  deploy_clean.py  deploy_proper.py  deploy_secure_mainnet.sh  deploy_simple.py  deploy_three_tier.py  docker-build.sh  docker-compose-up.sh  docker-compose.prod.yml  docker-compose.yml  docker-deploy.sh  docker-run.sh  final_deployment.sh  final_deployment_check.py  final_institutional_status.py  hardhat.config.js  index.html  init.sql  main.py  manage-ports.bat  manage-ports.sh  manage.bat  (+29 more)
.github/workflows/: deploy-to-render.yml
ainexus-dashboard/: .env.example  index.html  render.yaml  tailwind.config.js
ainexus-dashboard/src/: App.jsx  index.css
config/: mainnet_config.py  simulation_config.yaml
contracts/: AinexusAccountFactory.sol  AinexusArbitrageur.sol
contracts/interfaces/: IAaveV3Pool.sol  IERC20.sol  IUniswapV3Router.sol
dashboard/: vite.config.js
dashboard/src/: App.jsx  index.css
deploy/: production.sh
src/: App.jsx  blockchain_engine.py  engine_controller.py  main.py  main_clean.py
src/adapter/: sim_to_live.py
src/ai/: data_manager.py  delta_optimizer.py  genetic_optimizer.py  industrial_optimizer.py  optimizer_core.py  reinforcement.py
templates/: dashboard.html  dashboard_backup.html  dashboard_fixed.html
(+64 files in other folders)
