[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-nexus-engine"
version = "2.0.0"
description = "Industrial-Scale AI-Driven Arbitrage Flash Loan Engine"
requires-python = ">=3.8,<3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "web3==6.11.0",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "scikit-learn==1.4.1.post1",
    "gym==0.26.2",
    "prometheus-client==0.20.0",
    "requests==2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.5",
]
